[gd_scene load_steps=5 format=3 uid="uid://putyau8n04uh"]

[ext_resource type="Script" path="res://user_interface/user_interface.gd" id="1_ds8so"]
[ext_resource type="FontFile" uid="uid://dpl51xxuptasq" path="res://fonts/better-vcr5.1.ttf" id="2_v53io"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnp02"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gv8q"]
bg_color = Color(0.686275, 0, 0, 1)

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_ds8so")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.792
anchor_right = 0.5
anchor_bottom = 0.792
offset_left = -92.0
offset_top = -2.68
offset_right = 93.0
offset_bottom = 69.32
grow_horizontal = 2
grow_vertical = 2

[node name="Label_score" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_v53io")
theme_override_font_sizes/font_size = 40
text = "CЧЕТ: "

[node name="count_score" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_v53io")
theme_override_font_sizes/font_size = 40

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0

[node name="health_point_raw" type="HBoxContainer" parent="Control2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.5
offset_left = -11.0
offset_top = -11.0
offset_right = 489.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -56.0
offset_right = 20.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -13.5
offset_right = 250.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rnp02")
theme_override_styles/fill = SubResource("StyleBoxFlat_7gv8q")
show_percentage = false

[node name="Label" type="Label" parent="Control3"]
layout_mode = 0
offset_left = -224.0
offset_top = -16.0
offset_right = -92.0
offset_bottom = 7.0
theme_override_fonts/font = ExtResource("2_v53io")
text = "Первый босс"
